Got jQuery Mobile working and fixed some styles

--- a/assets/styles/src/base/_typography.scss
+++ b/assets/styles/src/base/_typography.scss
@@ -8,7 +8,7 @@ body {
   font-weight: 400;
 }
 
-@include fontface(patagonia, "assets/fonts/", patagonia);
+@include fontface(patagonia, "../../fonts/", patagonia-webfont);
 
 h1, .alpha,
 h2, .beta,
