--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,15 @@
 <header class="clearfix site-header">
   <div class="l-constrained">
     <h1 class="site-logo">
-      <a href="/">
+      <a href="/" data-transition="slide">
         <img src="assets/images/plaqueit-logo.png" alt="PlaqueIt" />
       </a>
     </h1>
     <ul class="site-navigation clearfix">
-      <li><a href="/server-side">Server Side</a></li>
-      <li><a href="/data">Data</a></li>
-      <li><a href="/technical-report">Technical Report</a></li>
-      <li><a href="/appendix">Appendix</a></li>
+      <li><a href="/server-side" data-transition="slide">Server Side</a></li>
+      <li><a href="/data" data-transition="slide">Data</a></li>
+      <li><a href="/technical-report" data-transition="slide">Technical Report</a></li>
+      <li><a href="/appendix" data-transition="slide">Appendix</a></li>
     </ul>
   </div>
 </header>
