--- a/assets/styles/src/style.scss
+++ b/assets/styles/src/style.scss
@@ -8,5 +8,6 @@
 @import "components/header";
 @import "components/media";
 @import "components/images";
+@import "components/links";
 
 @import 'layout/layout';
