Improved referencing, added essay, added Bibliography

--- a/views/partials/references.ejs
+++ b/views/partials/references.ejs
@@ -1,3 +1,5 @@
-<footer class="references">
-  <h2 class="beta">References</h2>
+<footer class="references l-constrained">
+    <h2 class="beta">References</h2>
+    <ul class="ref-list">
+    </ul>
 </footer>
