--- a/assets/styles/src/components/_images.scss
+++ b/assets/styles/src/components/_images.scss
@@ -14,3 +14,16 @@
   border: solid 25px white;
   border-radius: 10px;
 }
+
+.image-grid {
+  display: flex;
+  .image-container {
+    flex: 1;
+  }
+  .image-caption {
+    display: block;
+    margin-top: 10px;
+    font-size: 14px;
+    font-size: 1.4rem;
+  }
+}
