Add meta viewport to the header so it appears correctly on mobile, and add image list to appendix

--- a/assets/styles/src/components/_header.scss
+++ b/assets/styles/src/components/_header.scss
@@ -22,7 +22,8 @@
       padding-top: 5px;
       border-top: solid 5px transparent;
       transition: all 0.2s ease;
-      &:hover {
+      &:hover,
+      &.is-active {
         border-color: white;
         margin-top: -5px;
       }
