--- a/views/content/appendix.ejs
+++ b/views/content/appendix.ejs
@@ -1,4 +1,200 @@
 <div class="appendix l-constrained">
+  <p>This website is available at <a href="http://l2task5-tom.herokuapp.com">www.l2task5-tom.herokuapp.com</a> and the code is public on <a href="http://github.com/tomoakley/l2task5">Github</a>.</p>
+  <p>The code for the app is available on Github at <a href="http://github.com/tomoakley/plaqueit">tomoakley/plaqueit</a>. The backend code for the Servlets is available on Github at <a href="http://github.com/tomoakley/android-servlet-connection">tomoakley/android-servlet-connection</a>.</p>
+  <h2 class="beta">Images</h2>
+  <p>I have listed all the images used on the site below. Click on them to show them in a popup:</p>
+  <h3 class="gamma">App screenshots</h3>
+  <ul>
+    <li>
+      <a href="#dashboardScreenshot" data-rel="popup" data-transition="flow">Dashboard</a>
+      <div data-role="popup" id="dashboardScreenshot">
+        <img src="assets/images/app/dashboard.png" alt="Dashboard Screenshot" />
+      </div>
+    </li>
+    <li>
+      <a href="#mapScreenshot" data-rel="popup" data-transition="flow">Map View</a>
+      <div data-role="popup" id="mapScreenshot">
+        <img src="assets/images/app/map.png" alt="Map Screenshot" />
+      </div>
+    </li>
+    <li>
+      <a href="#plaqueScreenshot" data-rel="popup" data-transition="flow">Plaque Page</a>
+      <div data-role="popup" id="plaqueScreenshot">
+        <img src="assets/images/app/plaque.png" alt="Plaque Screenshot" />
+      </div>
+    </li>
+    <li>
+      <a href="#userScreenshot" data-rel="popup" data-transition="flow">User Profile</a>
+      <div data-role="popup" id="userScreenshot">
+        <img src="assets/images/app/user.png" alt="User Screenshot" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">Android Studio Screenshots</h3>
+  <ul>
+    <li>
+      <a href="#asyncCallback" data-rel="popup" data-transition="flow">Asynchronous Callback</a>
+      <div data-role="popup" id="asyncCallback">
+        <img src="assets/images/code/async-callback.png" alt="Android Asynchronous Callback" />
+      </div>
+    </li>
+    <li>
+      <a href="#dashboardAdapter" data-rel="popup" data-transition="flow">Dashboard Adapter</a>
+      <div data-role="popup" id="dashboardAdapter">
+        <img src="assets/images/code/dashboard-adapter.png" alt="Android Dashboard Adapter" />
+      </div>
+    </li>
+    <li>
+      <a href="#getRequest" data-rel="popup" data-transition="flow">Get the request</a>
+      <div data-role="popup" id="getRequest">
+        <img src="assets/images/code/getRequest-android.png" alt="Android Get Request" />
+      </div>
+    </li>
+    <li>
+      <a href="#plaqueObject" data-rel="popup" data-transition="flow">Plaque Object</a>
+      <div data-role="popup" id="plaqueObject">
+        <img src="assets/images/code/plaque-object.png" alt="Android Plaque Object" />
+      </div>
+    </li>
+    <li>
+      <a href="#plaqueRecycler" data-rel="popup" data-transition="flow">Plaque Recycler</a>
+      <div data-role="popup" id="plaqueRecycler">
+        <img src="assets/images/code/plaque-recycler.png" alt="Android Plaque Recycler" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">Servlet code</h3>
+  <ul>
+    <li>
+      <a href="#checkEmail" data-rel="popup" data-transition="flow">Check Email</a>
+      <div data-role="popup" id="checkEmail">
+        <img src="assets/images/code/check-email.png" alt="Servlet Check Email" />
+      </div>
+    </li>
+    <li>
+      <a href="#dbConnection" data-rel="popup" data-transition="flow">Database Connection</a>
+      <div data-role="popup" id="dbConnection">
+        <img src="assets/images/code/dbconnection.png" alt="Servlet Database Connection" />
+      </div>
+    </li>
+    <li>
+      <a href="#doLogin" data-rel="popup" data-transition="flow">doLogin method</a>
+      <div data-role="popup" id="doLogin">
+        <img src="assets/images/code/dologin.png" alt="Servlet doLogin" />
+      </div>
+    </li>
+    <li>
+      <a href="#favourite" data-rel="popup" data-transition="flow">Favourite Method</a>
+      <div data-role="popup" id="favourite">
+        <img src="assets/images/code/favourite.png" alt="Servlet Favourite Method" />
+      </div>
+    </li>
+    <li>
+      <a href="#getDetails" data-rel="popup" data-transition="flow">Get Details</a>
+      <div data-role="popup" id="getDetails">
+        <img src="assets/images/code/get-details.png" alt="Servlet Get Details" />
+      </div>
+    </li>
+    <li>
+      <a href="#userServlet" data-rel="popup" data-transition="flow">User Servlet</a>
+      <div data-role="popup" id="userServlet">
+        <img src="assets/images/code/user-servlet.png" alt="User Servlet" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">SQL Code</h3>
+  <ul>
+    <li>
+      <a href="#userSql" data-rel="popup" data-transition="flow">Users SQL</a>
+      <div data-role="popup" id="userSql">
+        <img src="assets/images/code/users-sql.png" alt="Users SQL" />
+      </div>
+    </li>
+    <li>
+      <a href="#favouriteSql" data-rel="popup" data-transition="flow">Favourite SQL</a>
+      <div data-role="popup" id="favouriteSql">
+        <img src="assets/images/code/favouritePlaques-sql.png" alt="Servlet Favourite SQL" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">MongoDB Code</h3>
+  <ul>
+    <li>
+      <a href="#mongoCode" data-rel="popup" data-transition="flow">MongoDB Experimental Code</a>
+      <div data-role="popup" id="mongoCode">
+        <img src="assets/images/code/mongo-code.png" alt="MongoDB Code" />
+      </div>
+    </li>
+    <li>
+      <a href="#mongoReturn" data-rel="popup" data-transition="flow">Mongo Return</a>
+      <div data-role="popup" id="mongoReturn">
+        <img src="assets/images/code/mongo-return.png" alt="Mongo Return" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">App Data</h3>
+  <ul>
+    <li>
+      <a href="#favouriteData" data-rel="popup" data-transition="flow">Favourite Data</a>
+      <div data-role="popup" id="favouriteData">
+        <img src="assets/images/data/favourite-data.png" alt="App Favourite Data" />
+      </div>
+    </li>
+    <li>
+      <a href="#plaqueData" data-rel="popup" data-transition="flow">Plaque Data</a>
+      <div data-role="popup" id="plaqueData">
+        <img src="assets/images/data/plaque-data.png" alt="App Plaque Data" />
+      </div>
+    </li>
+    <li>
+      <a href="#userData" data-rel="popup" data-transition="flow">User Data</a>
+      <div data-role="popup" id="userData">
+        <img src="assets/images/data/user-data.png" alt="App User Data" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">App Design</h3>
+  <ul>
+    <li>
+      <a href="#listView" data-rel="popup" data-transition="flow">List View</a>
+      <div data-role="popup" id="listView">
+        <img src="assets/images/design/list-view.jpg" alt="App List View" />
+      </div>
+    </li>
+    <li>
+      <a href="#plaquePageDesign" data-rel="popup" data-transition="flow">Plaque Page Design</a>
+      <div data-role="popup" id="plaquePageDesign">
+        <img src="assets/images/design/plaque.jpg" alt="App Plaque Page Design" />
+      </div>
+    </li>
+    <li>
+      <a href="#gestureDesign" data-rel="popup" data-transition="flow">Gesture Design</a>
+      <div data-role="popup" id="gestureDesign">
+        <img src="assets/images/design/gestures.png" alt="App Design - Gestures" />
+      </div>
+    </li>
+  </ul>
+  <h3 class="gamma">Data Models</h3>
+  <ul>
+    <li>
+      <a href="#useCase" data-rel="popup" data-transition="flow">Use Case</a>
+      <div data-role="popup" id="useCase">
+        <img src="assets/images/models/use-case-model.png" alt="Use Case Model" />
+      </div>
+    </li>
+    <li>
+      <a href="#erModel" data-rel="popup" data-transition="flow">Entity Relationship Model</a>
+      <div data-role="popup" id="erModel">
+        <img src="assets/images/models/er-model.png" alt="Entity Relationship Model" />
+      </div>
+    </li>
+    <li>
+      <a href="#databaseModel" data-rel="popup" data-transition="flow">Database Model</a>
+      <div data-role="popup" id="databaseModel">
+        <img src="assets/images/models/database-model.png" alt="Database Model" />
+      </div>
+    </li>
+  </ul>
   <h2 class="beta">Bibliography</h2>
   <ul class="bibliography-list">
   </ul>
