--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,13 +3,15 @@
 <html>
   <head>
     <title>Level 2 group project - Task 5 report</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/styles/build/style.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-    <script src="/assets/js/script.js"></script>
     <script src="https://use.typekit.net/eye4hys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
 
   <body>
+
+    <div data-role="page">
