Added some images to the technical report and added a little more content

--- a/views/content/appendix.ejs
+++ b/views/content/appendix.ejs
@@ -4,7 +4,7 @@
   <h2 class="beta">Images</h2>
   <p>I have listed all the images used on the site below. Click on them to show them in a popup:</p>
   <h3 class="gamma">App screenshots</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#dashboardScreenshot" data-rel="popup" data-transition="flow">Dashboard</a>
       <div data-role="popup" id="dashboardScreenshot">
@@ -31,7 +31,7 @@
     </li>
   </ul>
   <h3 class="gamma">Android Studio Screenshots</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#asyncCallback" data-rel="popup" data-transition="flow">Asynchronous Callback</a>
       <div data-role="popup" id="asyncCallback">
@@ -64,7 +64,7 @@
     </li>
   </ul>
   <h3 class="gamma">Servlet code</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#checkEmail" data-rel="popup" data-transition="flow">Check Email</a>
       <div data-role="popup" id="checkEmail">
@@ -103,7 +103,7 @@
     </li>
   </ul>
   <h3 class="gamma">SQL Code</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#userSql" data-rel="popup" data-transition="flow">Users SQL</a>
       <div data-role="popup" id="userSql">
@@ -118,7 +118,7 @@
     </li>
   </ul>
   <h3 class="gamma">MongoDB Code</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#mongoCode" data-rel="popup" data-transition="flow">MongoDB Experimental Code</a>
       <div data-role="popup" id="mongoCode">
@@ -133,7 +133,7 @@
     </li>
   </ul>
   <h3 class="gamma">App Data</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#favouriteData" data-rel="popup" data-transition="flow">Favourite Data</a>
       <div data-role="popup" id="favouriteData">
@@ -154,7 +154,7 @@
     </li>
   </ul>
   <h3 class="gamma">App Design</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#listView" data-rel="popup" data-transition="flow">List View</a>
       <div data-role="popup" id="listView">
@@ -175,7 +175,7 @@
     </li>
   </ul>
   <h3 class="gamma">Data Models</h3>
-  <ul>
+  <ul class="img-appendix-list">
     <li>
       <a href="#useCase" data-rel="popup" data-transition="flow">Use Case</a>
       <div data-role="popup" id="useCase">
@@ -192,6 +192,12 @@
       <a href="#databaseModel" data-rel="popup" data-transition="flow">Database Model</a>
       <div data-role="popup" id="databaseModel">
         <img src="assets/images/models/database-model.png" alt="Database Model" />
+      </div>
+    </li>
+    <li>
+      <a href="#learning" data-rel="popup" data-transition="flow">Learning over CS2001</a>
+      <div data-role="popup" id="learning">
+        <img src="assets/images/learning.png" alt="Learning over CS2001" />
       </div>
     </li>
   </ul>
