--- a/assets/styles/src/components/_links.scss
+++ b/assets/styles/src/components/_links.scss
@@ -23,3 +23,12 @@
     color: $primaryBlue !important;
   }
 }
+
+.img-appendix-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    margin-top: 10px;
+  }
+}
